# wikilens

./: .gitignore  .gitmodules  README.md  Todo.md  plan.md
backend/: CMakeLists.txt
backend/data/: stopwords.txt
backend/data/corpus/: doc1.txt  doc10.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt  doc6.txt  doc7.txt  doc8.txt  doc9.txt
backend/include/: bm25.h  document_store.h  inverted_index.h  porter_stemmer.h  posting.h  query_engine.h  tokenizer.h  wiki_parser.h  wikitext_stripper.h
backend/src/: bm25.cpp  document_store.cpp  main.cpp  porter_stemmer.cpp  query_engine.cpp  wiki_parser.cpp
backend/src/indexer/: inverted_index.cpp  tokenizer.cpp  wikitext_stripper.cpp
docs/: Todo.md  plan.md
frontend/: package.json
frontend/src/: App.tsx
